Added related work from US (CSTA etc.)

--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -50,11 +50,11 @@ Google\footnote{\url{http://www.google.com/edu/computational-thinking/}} and the
 \textit{International Society for Technology in Education}\footnote{\url{http://www.iste.org/learn/computational-thinking}}.
 
 Crucial elements of this perspective are that:
-\begin{itemize}
+\begin{compactitem}
 \item Computational thinking is a way that humans, not computers, think.
 \item Computational thinking is a fundamental skill for
 everyone, not just for computer scientists.
-\end{itemize}
+\end{compactitem}
 
 
 \paragraph{Computational Thinking in Schools.}
@@ -112,7 +112,7 @@ Their suggested `terminological reform'  encapsulates the understood position of
 
 \begin{figure}\centering
 \includegraphics[width=.9\textwidth]{terminology}
-\caption{Suggested terminological reform from the 
+\caption{Replacing `ICT': suggested terminological reform from the 
 \textit{Computing in Schools} initiative, emphasising the distinctive identity of Computer Science.}
 \label{ref:terminology}
 \end{figure}
@@ -145,6 +145,44 @@ for teacher training in Computer Science.
 \caption{Key points identified by the \textit{Computing at Schools} group based on a study of the international experience with teaching computing in schools (direct quotation from \cite{cat-brief-11}).}
 \label{fig:points}
 \end{figure}
+
+\paragraph{Recent initiatives in the US:}  
+
+In the US, much of the focus on K-12 CS edutaion is directed through the ACM-supported \textit{Computer Science Teachers Association} (CSTA)\footnote{\url{http://csta.acm.org/}}.  In their 2010 report they identify gaps in state standards for CS education, as well as major terminological confusion between digital literacy, information technology and computer science \cite{csta-roe10}.  They identify the need to establish Computer Science as an academic discipline within the STEM fields; the key topics they identify in CS education are shown in Figure \ref{fig:cse}.
+The CSTA has established a \textit{Computational Thinking Task Force} to collect and disseminate teaching resources and projects in this area.
+
+\begin{figure}
+\figline\\
+\centerline{\begin{tabular}{p{.9\textwidth}}
+\textbf{Computer science education} includes the following
+elements: design (both software and hardware), creation
+of digital artifacts, abstraction, logic, algorithm development and implementation, programming paradigms and
+languages, theoretical foundations, networks, graphics,
+databases and information retrieval, information security
+and privacy, artificial intelligence, the relationship between computing and mathematics, the limits of computation, applications in information technology and information systems, and social impacts of computing.
+\end{tabular}}
+\figline
+\caption{Elements of Computer Science education for K-12, as identified by the CSTA (direct quotation from \cite{csta-roe10}).}
+\label{fig:cse}
+\end{figure}
+
+
+The CS10K community\footnote{\url{http://cs10kcommunity.org/}}
+aims to place 10,000 qualified computer science teachers into high schools to broaden access to computing education.  They have developed resources in two streams: \emph{Exploring Computer Science} covers problem solving, web design, programming (using \textit{Scratch}) and robotics, while \emph{Computer Science Principles} has a stronger  programming and algorithms focus (and uses \textit{App Inventor}, a Scratch-like environment for Android app development).
+The CS10K Project is supported by the National Science Foundation as part of its Computing Education for the 21st Century (CE21) programme.
+
+As a further development, \textit{Computer Science: Principles}\footnote{\url{csprinciples.org}} is a
+proposed AP course being developed by the College Board, descigned as an ``introductory college-level course	for	everyone'' \cite{Astrachan:2012}.  It emphasises what it calls \textit{computational thinking practices}, such as developing computational artefacts, creativity, abstraction and communication.
+
+Each of these courses is considerably broader than that proposed by our PACT initiative, but many of the topics overlap, and it should be possible to reuse some of the rich collection of resources they have developed.
+ 
+\bigskip
+In summary, the principal initiatives from the UK, USA and other countries emphasise: 
+\begin{compactitem}
+\item the need to reform CS education at post-primary level,
+\item the need to distinguish clearly between digital literacy, information technology and CS,
+\item the need to teach CS concepts as a rigorous academic discipline within the STEM subjects.
+\end{compactitem}
 
 
 \section{Our work to date}
@@ -230,6 +268,6 @@ James F. Power.
 
 Our website is: \url{http://www.cs.nuim.ie/pact}.
 
-\bibliographystyle{alpha}
+\bibliographystyle{plain}
 \bibliography{ref}
 \end{document}
