--- a/manifesto/ref.bib
+++ b/manifesto/ref.bib
@@ -1,6 +1,6 @@
 @InProceedings{conneely13,
 author = {C. Conneely and D. Murchan and B. Tangney and K. Johnston},
-title = {21 Century Learning - Teachers’ and Students’ Experiences and Views of the Bridge21 Approach within Mainstream Education},
+title = {21 Century Learning - Teachers’ and Students’ Experiences and Views of the {Bridge21} Approach within Mainstream Education},
 booktitle = {Society for Information Technology \& Teacher Education International Conference},
 pages = {5125-5132},
 year = {2013},
@@ -31,7 +31,7 @@ month = {March},
 }
 
 @Misc{ncca2013,
-  TITLE =        {Key Skills of Junior Cycle},
+  TITLE =        {Key Skills of {J}unior {C}ycle},
   author =       {NCCA},
   howpublished = {\url{http://www.juniorcycle.ie/NCCA_JuniorCycle/media/NCCA/Documents/Key/Key-Skills-Overview-Feb-2013.pdf}},
   month =        {February},
@@ -42,7 +42,7 @@ month = {March},
 
 @Misc{ncca-prog13,
 author = {NCCA},
-title = {Programming and Coding: Draft Specification for Junior Cycle Short Course},
+title = {Programming and Coding: Draft Specification for {J}unior {C}ycle Short Course},
 howpublished = {\url{http://www.juniorcycle.ie/Curriculum/Consultation/Short-Courses/Programming-and-Coding}},
 month = {October},
 year = {2013},
@@ -91,3 +91,25 @@ year = {2011},
   month =        {January},
   year =         {2012},
 }
+
+@Misc{csta-roe10,
+author = {Computer Science Teachers Association},
+title = {Running On Empty:
+The Failure to Teach {K–12} Computer
+Science in the Digital Age},
+howpublished = {\url{http://www.acm.org/runningonempty/}},
+year = {2010},
+}
+
+@article{Astrachan:2012,
+ author = {Astrachan, Owen and Briggs, Amy},
+ title = {The {CS} Principles Project},
+ journal = {ACM Inroads},
+ issue_date = {June 2012},
+ volume = {3},
+ number = {2},
+ month = jun,
+ year = {2012},
+ pages = {38--42},
+} 
+
