Added in additional schools
I have added in the additional schools who have expressed an interest in
joining PACT

--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -15,7 +15,7 @@
 \author{Aidan Mooney \and James F. Power}
 
 \begin{figure}\centering
-\includegraphics[height=.2\textheight]{nuim_large}
+\includegraphics[height=.2\textheight]{nuim_large.jpg}
 \end{figure}
 
 \maketitle
@@ -110,8 +110,8 @@ development for teachers will be needed.
 
 Their suggested `terminological reform'  encapsulates the understood position of Computer Science from our perspective, but is nonetheless worth replicating here since it is not widely understood outside the discipline (Figure \ref{ref:terminology}).  While much of this document is discusses long-term funding needs and is thus directed at policy-makers, the emphasis on depth and rigour is similar in spirit to our PACT initiative.
 
-\begin{figure}\centering
-\includegraphics[width=.9\textwidth]{terminology}
+\begin{figure}\centering[!h]
+\includegraphics[width=.9\textwidth]{terminology.png}
 \caption{Replacing `ICT': suggested terminological reform from the 
 \textit{Computing in Schools} initiative, emphasising the distinctive identity of Computer Science.}
 \label{ref:terminology}
@@ -241,15 +241,18 @@ Towards the end of the academic year 2013-14 we are going to host a competition 
 
 
 \section{Future Work}
-As of the 1st April 2014 we have already received interest from the following schools:
+As of the 15th May 2014 we have already received interest from the following schools:
 \begin{compactitem}
   \item Tallaght Community School, Dublin. 
   \item Sandford Park, Ranelagh, Dublin.
   \item St. Munchin's College, Limerick.
-  \item Beneavin college, Finglas, Dublin.
-\end{compactitem}
+  \item Beneavin College, Finglas, Dublin.
+  \item Coláiste Cois Life, Lucan, Dublin.
+  \item St. Wolstans Community School, Celbridge, Kildare. 
+  \item Colaiste Chiarain, Leixlip, Kildare. 
+\end{compactitem}  
 
-These schools have approached us directly from seeing our webpage or from teachers who are involved in the pilot programme this year. We hope to run this programme again for the academic year 2014-15 with a larger number of schools and take on board the feedback received from the teachers and students in the first year.
+The majority of these schools have approached us directly from seeing our webpage or from teachers who are involved in the pilot programme this year. We have also distributed letters to 10 schools based on their proximity to NUIM that are not currently enrolled in PACT. We hope to run this programme again for the academic year 2014-15 with a larger number of schools and take on board the feedback received from the teachers and students in the first year.
 
 \section{Contact Us}
 The PACT team can be contacted at the following email address: \url{pact@cs.nuim.ie}.
