Added in about Keith and some survey feedback
I added in details about the feedback from the students and teachers so
far. In addition I added in about Keith working as an intern in the
summer

--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -110,7 +110,7 @@ development for teachers will be needed.
 
 Their suggested `terminological reform'  encapsulates the understood position of Computer Science from our perspective, but is nonetheless worth replicating here since it is not widely understood outside the discipline (Figure \ref{ref:terminology}).  While much of this document is discusses long-term funding needs and is thus directed at policy-makers, the emphasis on depth and rigour is similar in spirit to our PACT initiative.
 
-\begin{figure}\centering[!h]
+\begin{figure}\centering
 \includegraphics[width=.9\textwidth]{terminology.png}
 \caption{Replacing `ICT': suggested terminological reform from the 
 \textit{Computing in Schools} initiative, emphasising the distinctive identity of Computer Science.}
@@ -120,8 +120,7 @@ Their suggested `terminological reform'  encapsulates the understood position of
 
 
 
-The \textit{Computing at School}\footnote{\url{http://www.computingatschool.org.uk/}} initiative by the
-British Computer Society has produced a curriculum for schools that has been endorsed by Microsoft, Google and Intellect an d published in March 2012 \cite{bcs-curr12}.  This curriculum develops a clear agenda for computing-related concepts, stratified in five stages that cover primary and post primary education.  It clearly identifies Computer Science as a STEM discipline, distinguishes it from Information Technology, and emphasises core skills such as programming as well as more abstract skills such as designing algorithms and computational thinking.  While this \textit{Computing at School} is a much more ambitious agenda that the PACT initiative, it shares many of the themes and goals of PACT.
+The \textit{Computing at School}\footnote{\url{http://www.computingatschool.org.uk/}} initiative by the British Computer Society has produced a curriculum for schools that has been endorsed by Microsoft, Google and Intellect an d published in March 2012 \cite{bcs-curr12}.  This curriculum develops a clear agenda for computing-related concepts, stratified in five stages that cover primary and post primary education.  It clearly identifies Computer Science as a STEM discipline, distinguishes it from Information Technology, and emphasises core skills such as programming as well as more abstract skills such as designing algorithms and computational thinking.  While this \textit{Computing at School} is a much more ambitious agenda that the PACT initiative, it shares many of the themes and goals of PACT.
 
 The summary of key points from a related \textit{Computing at School} briefing note published in November 2011 \cite{cat-brief-11} is worth quoting in full, since it covers many of the key points that have informed the PACT initiative (see Figure \ref{fig:points}).  
 
@@ -222,22 +221,49 @@ An exercise book was created for all lessons within these sections which the tea
 Section 3 focused on algorithms and the process of analysing problems to devise abstract computational solutions.  It showed how to write a step by step procedure to solve some classic problems in Computer Science. Section 4 looked at generating simple 2-D graphics using the \textit{Pygame} set of modules. This section focused on allowing the participants to create fully featured games in the \textit{Python} language, and can provide a useful focus for project-based programming work.  Section 5 covered topics related to recursion which has been defined as ``the process of repeating items in a self-similar way" and is fundamental to the core theory of Computer Science. \\
 
 
-\textbf{Should we put in learning outcomes here??}
-\newline
+%\newline
 
 
-\paragraph{Competition:}
-Towards the end of the academic year 2013-14 we are going to host a competition which is open to all the students who were involved with the PACT pilot programme. This competition is aimed at providing examples of best practice and each school participating in the pilot is invited to select up to two teams, consisting of 3-5 students, to participate in the competition. The selection of teams and team members is entirely at the discretion of the schools. Participants in the competition should highlight explicitly how their experience with the PACT programme has contributed to two or more of the six key areas identified by the NCCA \cite{ncca2013}, namely:
+%\paragraph{Competition:}
+%Towards the end of the academic year 2013-14 we are going to host a competition which is open to all the students who were involved with the PACT pilot programme. This competition is aimed at providing examples of best practice and each school participating in the pilot is invited to select up to two teams, consisting of 3-5 students, to participate in the competition. The selection of teams and team members is entirely at the discretion of the schools. Participants in the competition should highlight explicitly how their experience with the PACT programme has contributed to two or more of the six key areas identified by the NCCA \cite{ncca2013}, namely:
 
-\begin{compactenum}
-  \item Managing Myself.
-  \item Staying Well.
-  \item Communicating.
-  \item Being Creative.
-  \item Working with Others.
-  \item Managing Information and Thinking.
-\end{compactenum}
+%\begin{compactenum}
+%  \item Managing Myself.
+%  \item Staying Well.
+%  \item Communicating.
+%  \item Being Creative.
+%  \item Working with Others.
+%  \item Managing Information and Thinking.
+%\end{compactenum}
 
+\section{Feedback}
+Towards the end of the 2013-14 academic year the PACT team organised for surveys to be made available for teachers who taught the PACT material \footnote{\url{https://docs.google.com/forms/d/1-17vL9ZxeTVIKfJcsNm0rMDiJsISttpcA2Cm5VQVLvk/viewform}} and also for the students who took the module \footnote{\url{https://docs.google.com/forms/d/1_l0fmD1C9aLeD7pwdl5a9Im4Or3ZzuvHe6MfsD5KOs0/viewform}}. 
+
+To date there have been $62$ student responses and $7$ teacher responses.  These $7$ teachers represented $5$ schools within these $5$ schools $294$ took the module across $13$ class groups. There was one all-girls school, one all-boys school and three mixed schools. It is clear from the teacher responses that unless there is complete support and buy-in from the management of the school courses like this will not survive.  One teacher commented that ``The pupils were very keen to learn how programming was being used in the working world", something that the PACT team has tried to incorporate in to the module.
+
+\textbf{These figures will need to be updated when all submissions are received.}
+
+No streaming took place in any of the class groups which took this module. However, one teacher noted that there was ``No streaming, but the students choose to take the course. 2/3 of them were ordinary level maths students and they could not get their head around the logical thinking required to program and they ended up moving over to Scratch instead". All of the classes covered Python 1 and Python 2 with most also covering Algorithms with some covering Self-Reference and Graphics.
+
+Initial analysis of the feedback suggests that almost $65\%$ of the students found that ``taking part in this pilot programme has been beneficial to you"? $80\%$ of the students who replied to the survey said that this module was very different compared to other subjects they have taken in school.
+
+Asked as to what the students enjoyed in the module some of the positive responses were:
+
+\begin{compactitem}
+  \item ``It was different to other things on the computer". 
+  \item ``I enjoyed being able to tell the computer to do something and it would do it".
+  \item ``Learning the basics of coding".
+  \item ``I most enjoyed writing codes that had a visual result like the turtle code".
+\end{compactitem}  
+
+When the students were asked to provide some overall feedback on the programme and any suggestions on how this could be improved, some of the responses were:
+
+\begin{compactitem}
+  \item ``I feel it should be continued as it seemed very beneficial and helpful for the other lads but it just wasn't for me really . One way I think it could be improved would be if there was some kind of game involved rather than just doing exercises all the time.". 
+  \item ``It was very enjoyable and different. Sometimes it was very hard but extremely good and beneficial".
+  \item ``It was good to learn how to programme/ make programmes.".
+  \item ``I thought the whole program was good, and I did look forward to each class. I think that the questions that are posed to do should be a bit more practical and try give the user more of feeling of what the computer is actually doing. Example of where I previously learned code can be seen in Lua, from ComputerCraft. There is a ComputerCraft Edu that teaches people lua. This could be used to show people how code works and impacts better that through the IDLE.".
+\end{compactitem}  
 
 
 \section{Future Work}
@@ -253,6 +279,8 @@ As of the 15th May 2014 we have already received interest from the following sch
 \end{compactitem}  
 
 The majority of these schools have approached us directly from seeing our webpage or from teachers who are involved in the pilot programme this year. We have also distributed letters to 10 schools based on their proximity to NUIM that are not currently enrolled in PACT. We hope to run this programme again for the academic year 2014-15 with a larger number of schools and take on board the feedback received from the teachers and students in the first year.
+
+During the Summer of 2014 a student intern will be working with the PACT team to develop further resources for teachers, develop a wiki with resources for students and analyse possible future developments for PACT, amongst other things.
 
 \section{Contact Us}
 The PACT team can be contacted at the following email address: \url{pact@cs.nuim.ie}.
