--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -267,7 +267,7 @@ As of the 15th May 2014 we have already received interest from the following sch
   \item Coláiste Cois Life, Lucan, Dublin.
   \item St. Wolstans Community School, Celbridge, Kildare. 
   \item Colaiste Chiarain, Leixlip, Kildare. 
-  \item Colaiste Bríde, Clondalkin, Dublin.
+  \item St. Mel's College, Longford.
 \end{compactitem}  
 
 The majority of these schools have approached us directly from seeing our webpage or from teachers who are involved in the pilot programme this year. We have also distributed letters to 10 schools based on their proximity to NUIM that are not currently enrolled in PACT. We hope to run this programme again for the academic year 2014-15 with a larger number of schools and take on board the feedback received from the teachers and students in the first year.
