--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -32,7 +32,7 @@ NUI Maynooth has been delivering programmes in Computer Science at undergraduate
 
 \paragraph{What is Computational Thinking?}
 
-The phrase \textit{Computational Thinking} was originally coined in the context of mathematics education by by Seymour Papert \cite{papert96}, but came to prominence in Computer Science following an influential article by Jeannette M. Wing \cite{wing-cacm06}.  Wing's article described computational thinking as
+The phrase \textit{Computational Thinking} was originally coined in the context of mathematics education by Seymour Papert \cite{papert96}, but came to prominence in Computer Science following an influential article by Jeannette M. Wing \cite{wing-cacm06}.  Wing's article described computational thinking as
 \begin{quotation}
 ``Computational thinking builds on the power and limits of computing processes, whether they are executed by a human or by a machine.  Computational thinking confronts the riddle of machine intelligence: What can humans do better than computers? and What can computers do better than humans? Most fundamentally it addresses the question: What is computable?''
 \end{quotation}
