--- a/manifesto/ref.bib
+++ b/manifesto/ref.bib
@@ -85,7 +85,7 @@ year = {2011},
 
 
 @Misc{rcs-cis12,
-  TITLE =        {Shut down or restart?  The way forward for computing in UK schools},
+  TITLE =        {Shut down or restart? {T}he way forward for computing in {UK} schools},
   author =       {The Royal Society},
   howpublished = {\url{http://royalsociety.org/education/policy/computing-in-schools/}},
   month =        {January},
